--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+	    <dependency>
+    		<groupId>org.xerial</groupId>
+    		<artifactId>sqlite-jdbc</artifactId>
+    		<version>3.45.3.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -26,34 +31,24 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>org.hibernate.orm</groupId>
+    		<artifactId>hibernate-community-dialects</artifactId>
+   		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
-     		<groupId>org.springframework.boot</groupId>
-      		<artifactId>spring-boot-starter-security</artifactId>
-    	</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
    			<groupId>org.projectlombok</groupId>
     		<artifactId>lombok</artifactId>
    			<version>1.18.32</version>
     		<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
